--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "enableIvy": true,
+    "strictPropertyInitialization": false
   }
 }
